# noisecore

./: CHANGELOG.md  README.md  index.html  pyproject.toml  ubp_noise_core_1.py  ubp_noisecore_v4_extensions.py  ubp_unified_v5.py  whiteboard.md
dev/: Study_ Evolution of UBP Noisecore into a Functional Virtual ALU  UBP NoiseCore v4.0 — Comprehensive Audit & Application Report.md  mathnet_external_results.json  proposed_sm_laws.json  riemann_insight.py  solve_mathnet.py  ubp_barnes_wall.py  ubp_mathnet_expanded_problems.json  ubp_mathnet_problem_set.json  ubp_noisecore_alu.py  ubp_noisecore_v2.py  ubp_noisecore_v3.py  ubp_noisecore_v4.py  ubp_swarm_tct_v25.py  ubp_v28_oracle.py
docs/: ARCHITECTURE.md  ISA.md  PROGRAMMER_GUIDE.md
examples/: 01_hello.nca  02_factorial_iter.nca  03_factorial_recursive.nca  04_bubble_sort.nca  05_prime_sieve.nca  06_fibonacci.nca  07_gcd.nca  08_string_reverse.nca  09_dot_product.nca  10_modexp.nca  11_matrix2x2_mul.nca  12_palindrome_check.nca  13_stream_sum3.nca  14_checksum_ascii.nca
noisecore_vm/: __init__.py  cli.py
noisecore_vm/core/: __init__.py  golay_engine.py  substrate.py
noisecore_vm/vm/: __init__.py  assembler.py  cpu.py  disassembler.py  isa.py
scripts/: run_examples.py  validate_and_report.py
tests/: conftest.py  test_arithmetic.py  test_assembler.py  test_branches.py  test_cpu_state.py  test_immediate.py  test_isa_completeness.py  test_memory.py  test_programs.py  test_shadow.py  test_stack.py  test_substrate.py  test_substrate_alu.py  test_syscalls.py
