[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noisecore-vm"
version = "1.2.0"
description = "NoiseCore VM: a substrate-mediated virtual computation environment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "E R A Craig / UBP Research"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
noisecore = "noisecore_vm.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["noisecore_vm*"]
